# smart-secret-scan

./: .pre-commit-hooks.yaml  CHANGELOG.md  README.md  pyproject.toml
src/sentinel/: __init__.py  baseline.py  cli.py  entropy.py  rules.py
tests/: test_baseline.py  test_cli.py  test_entropy.py  test_rules.py
