[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "sentinel-scan"
version = "0.3.0"
description = "A self-learning secret scanner for pre-commit with inline allowlist pragmas and placeholder suppression."
readme = "README.md"
authors = [{ name = "Joshua John", email = "josh202@gmail.com" }]
requires-python = ">=3.8"
license = { text = "MIT" }
keywords = ["security", "secrets", "pre-commit", "entropy", "git", "scanner"]

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.scripts]
sentinel = "sentinel.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
